errori.txt
In file included from pcb.c:9:
pcb.c:16:18: error: redefinition of ‘pcbFree_h’
 HIDDEN LIST_HEAD(pcbFree_h); //Macro di listx.h: inizializza la sentinella alla pcbFree. pcbFree_h è la sentinella della coda di pcb
                  ^~~~~~~~~
listx.h:78:19: note: in definition of macro ‘LIST_HEAD’
  struct list_head name = LIST_HEAD_INIT(name)
                   ^~~~
pcb.c:16:18: note: previous definition of ‘pcbFree_h’ was here
 HIDDEN LIST_HEAD(pcbFree_h); //Macro di listx.h: inizializza la sentinella alla pcbFree. pcbFree_h è la sentinella della coda di pcb
                  ^~~~~~~~~
listx.h:78:19: note: in definition of macro ‘LIST_HEAD’
  struct list_head name = LIST_HEAD_INIT(name)
                   ^~~~
pcb.c:30:13: error: redefinition of ‘initPcbs’
 HIDDEN void initPcbs(void){
             ^~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:30:13: note: previous definition of ‘initPcbs’ was here
 HIDDEN void initPcbs(void){
             ^~~~~~~~
pcb.c:39:13: error: redefinition of ‘freePcb’
 HIDDEN void freePcb(pcb_t *p){
             ^~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:39:13: note: previous definition of ‘freePcb’ was here
 HIDDEN void freePcb(pcb_t *p){
             ^~~~~~~
pcb.c:45:15: error: redefinition of ‘allocPcb’
 HIDDEN pcb_t *allocPcb(void){
               ^~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:45:15: note: previous definition of ‘allocPcb’ was here
 HIDDEN pcb_t *allocPcb(void){
               ^~~~~~~~
pcb.c:73:13: error: redefinition of ‘mkEmptyProcQ’
 HIDDEN void mkEmptyProcQ(struct list_head *head){
             ^~~~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:73:13: note: previous definition of ‘mkEmptyProcQ’ was here
 HIDDEN void mkEmptyProcQ(struct list_head *head){
             ^~~~~~~~~~~~
pcb.c:80:12: error: redefinition of ‘emptyProcQ’
 HIDDEN int emptyProcQ(struct list_head *head){
            ^~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:80:12: note: previous definition of ‘emptyProcQ’ was here
 HIDDEN int emptyProcQ(struct list_head *head){
            ^~~~~~~~~~
pcb.c:88:13: error: redefinition of ‘insertProcQ’
 HIDDEN void insertProcQ(struct list_head *head, pcb_t *p){
             ^~~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:88:13: note: previous definition of ‘insertProcQ’ was here
 HIDDEN void insertProcQ(struct list_head *head, pcb_t *p){
             ^~~~~~~~~~~
pcb.c:106:15: error: redefinition of ‘headProcQ’
 HIDDEN pcb_t *headProcQ(struct list_head *head){
               ^~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:106:15: note: previous definition of ‘headProcQ’ was here
 HIDDEN pcb_t *headProcQ(struct list_head *head){
               ^~~~~~~~~
pcb.c:116:15: error: redefinition of ‘removeProcQ’
 HIDDEN pcb_t *removeProcQ(struct list_head *head){
               ^~~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:116:15: note: previous definition of ‘removeProcQ’ was here
 HIDDEN pcb_t *removeProcQ(struct list_head *head){
               ^~~~~~~~~~~
pcb.c:128:15: error: redefinition of ‘outProcQ’
 HIDDEN pcb_t *outProcQ(struct list_head *head, pcb_t *p){
               ^~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:128:15: note: previous definition of ‘outProcQ’ was here
 HIDDEN pcb_t *outProcQ(struct list_head *head, pcb_t *p){
               ^~~~~~~~
pcb.c:144:12: error: redefinition of ‘emptyChild’
 HIDDEN int emptyChild(pcb_t *this){
            ^~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:144:12: note: previous definition of ‘emptyChild’ was here
 HIDDEN int emptyChild(pcb_t *this){
            ^~~~~~~~~~
pcb.c:149:13: error: redefinition of ‘insertChild’
 HIDDEN void insertChild(pcb_t *prnt, pcb_t *p){
             ^~~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:149:13: note: previous definition of ‘insertChild’ was here
 HIDDEN void insertChild(pcb_t *prnt, pcb_t *p){
             ^~~~~~~~~~~
pcb.c:156:15: error: redefinition of ‘removeChild’
 HIDDEN pcb_t *removeChild(pcb_t *p){
               ^~~~~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:156:15: note: previous definition of ‘removeChild’ was here
 HIDDEN pcb_t *removeChild(pcb_t *p){
               ^~~~~~~~~~~
pcb.c:172:15: error: redefinition of ‘outChild’
 HIDDEN pcb_t *outChild(pcb_t *p){
               ^~~~~~~~
In file included from pcb.h:6,
                 from pcb.c:11:
pcb.c:172:15: note: previous definition of ‘outChild’ was here
 HIDDEN pcb_t *outChild(pcb_t *p){
               ^~~~~~~~





mipsel-linux-gnu-gcc -ansi -mips1 -mfp32 -I/usr/local/include/umps2 -c pcb.c